feat: get tasks with filter
